--- a/translations/texts/objects/apex/apexarmchair/apexarmchair.object.json
+++ b/translations/texts/objects/apex/apexarmchair/apexarmchair.object.json
@@ -1,6 +1,8 @@
 [
   {
-    "DeniedAlternatives": [],
+    "DeniedAlternatives": [
+      ""
+    ],
     "Files": {
       "objects/apex/apexarmchair/apexarmchair.object": [
         "/humanDescription"
@@ -20,7 +22,7 @@
     },
     "Texts": {
       "Eng": "Apex fashions have evolved since this chair was made; sadly, Apex freedoms have not.",
-      "Rus": ""
+      "Rus": "Мода Апексов эволюционировала с тех пор как этот стул был сделан А их свобода нет."
     }
   },
   {
@@ -44,7 +46,7 @@
     },
     "Texts": {
       "Eng": "Sssickening.",
-      "Rus": ""
+      "Rus": "Тошнотворный."
     }
   },
   {
@@ -84,7 +86,9 @@
     }
   },
   {
-    "DeniedAlternatives": [],
+    "DeniedAlternatives": [
+      "Эта обивка из бананов."
+    ],
     "Files": {
       "objects/apex/apexarmchair/apexarmchair.object": [
         "/description"
@@ -92,7 +96,7 @@
     },
     "Texts": {
       "Eng": "This upholstery is bananas.",
-      "Rus": ""
+      "Rus": "Это банановая обивка."
     }
   },
   {
