--- a/translations/texts/objects/apex/apexlamp2/apexlamp2.object.json
+++ b/translations/texts/objects/apex/apexlamp2/apexlamp2.object.json
@@ -1,24 +1,30 @@
 [
   {
-    "DeniedAlternatives": [],
+    "DeniedAlternatives": [
+      "Высокая лампа. Как же она работает? Здесь нет эркиевых кристаллов."
+    ],
     "Files": {
       "objects/apex/apexlamp2/apexlamp2.object": [
         "/avianDescription"
       ]
     },
     "Texts": {
-      "Eng": "A tall lamp. I wonder how it functions? There are no crystals."
+      "Eng": "A tall lamp. I wonder how it functions? There are no crystals.",
+      "Rus": "Высокая лампа. Как же она работает? Здесь нет кристаллов."
     }
   },
   {
-    "DeniedAlternatives": [],
+    "DeniedAlternatives": [
+      "Высокий деревянный светильник с абажуром в горошек"
+    ],
     "Files": {
       "objects/apex/apexlamp2/apexlamp2.object": [
         "/description"
       ]
     },
     "Texts": {
-      "Eng": "A tall wooden lamp with a polka dot lamp shade."
+      "Eng": "A tall wooden lamp with a polka dot lamp shade.",
+      "Rus": "Деревянный торшер с абажуром в горошек."
     }
   },
   {
@@ -29,7 +35,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A tall, bright lamp."
+      "Eng": "A tall, bright lamp.",
+      "Rus": "Высокая, яркая лампа."
     }
   },
   {
@@ -40,7 +47,8 @@
       ]
     },
     "Texts": {
-      "Eng": "It's a tall, standin' lamp."
+      "Eng": "It's a tall, standin' lamp.",
+      "Rus": "Это высокий напольный светильник."
     }
   },
   {
@@ -51,18 +59,22 @@
       ]
     },
     "Texts": {
-      "Eng": "Standard Issue Tall Lamp"
+      "Eng": "Standard Issue Tall Lamp",
+      "Rus": "Светильник стандартного образца"
     }
   },
   {
-    "DeniedAlternatives": [],
+    "DeniedAlternatives": [
+      "Стандартный выпуск"
+    ],
     "Files": {
       "objects/apex/apexlamp2/apexlamp2.object": [
         "/apexDescription"
       ]
     },
     "Texts": {
-      "Eng": "Standard issue."
+      "Eng": "Standard issue.",
+      "Rus": "Стандартный образец."
     }
   },
   {
@@ -73,29 +85,36 @@
       ]
     },
     "Texts": {
-      "Eng": "Tall lamp, bright light."
+      "Eng": "Tall lamp, bright light.",
+      "Rus": "Высокая лампа, яркий свет."
     }
   },
   {
-    "DeniedAlternatives": [],
+    "DeniedAlternatives": [
+      "Эта лампа может осветить большую комнату."
+    ],
     "Files": {
       "objects/apex/apexlamp2/apexlamp2.object": [
         "/hylotlDescription"
       ]
     },
     "Texts": {
-      "Eng": "This lamp could light a large chamber."
+      "Eng": "This lamp could light a large chamber.",
+      "Rus": "Эта лампа может осветить большую область."
     }
   },
   {
-    "DeniedAlternatives": [],
+    "DeniedAlternatives": [
+      "Свет - гарантия безопасности"
+    ],
     "Files": {
       "objects/apex/apexlamp2/apexlamp2.object": [
         "/glitchDescription/glitchEmotedText"
       ]
     },
     "Texts": {
-      "Eng": "With light comes safety."
+      "Eng": "With light comes safety.",
+      "Rus": "Вместе со светом приходит безопасность."
     }
   }
 ]
