--- a/translations/texts/objects/apex/shared_vaseclassic/shared_vaseclassic.json
+++ b/translations/texts/objects/apex/shared_vaseclassic/shared_vaseclassic.json
@@ -16,7 +16,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A decorative vase. Looks pretty smashable."
+      "Eng": "A decorative vase. Looks pretty smashable.",
+      "Rus": "Декоративная ваза. Выглядит очень хрупкой."
     }
   },
   {
@@ -43,11 +44,13 @@
     },
     "Texts": {
       "Eng": "Avians often store trinkets in pots. Perhaps others do the same.",
-      "Rus": "Авиане часто хранят безделушки в горшках. Может и Апексы делают так же."
+      "Rus": "Авиане часто хранят безделушки в горшках. Может и другие делают так же."
     }
   },
   {
-    "DeniedAlternatives": [],
+    "DeniedAlternatives": [
+      "Я думаю внутри что-то есть."
+    ],
     "Files": {
       "objects/apex/vaseclassiclarge1/vaseclassiclarge1.object": [
         "/glitchDescription/glitchEmotedText"
@@ -69,7 +72,8 @@
       ]
     },
     "Texts": {
-      "Eng": "I believe there may be something inside."
+      "Eng": "I believe there may be something inside.",
+      "Rus": "Мне кажется внутри что-то есть."
     }
   },
   {
@@ -95,7 +99,8 @@
       ]
     },
     "Texts": {
-      "Eng": "I think I hear something inside."
+      "Eng": "I think I hear something inside.",
+      "Rus": "Я слышу какие-то звуки внутри."
     }
   },
   {
@@ -121,7 +126,8 @@
       ]
     },
     "Texts": {
-      "Eng": "I've always wanted to smash one of these."
+      "Eng": "I've always wanted to smash one of these.",
+      "Rus": "Мне всегда хотелось разбить одну из таких."
     }
   },
   {
@@ -152,7 +158,9 @@
     }
   },
   {
-    "DeniedAlternatives": [],
+    "DeniedAlternatives": [
+      "Для меня горшки это только горшки, старые или новые"
+    ],
     "Files": {
       "objects/apex/vaseclassiclarge1/vaseclassiclarge1.object": [
         "/novakidDescription"
@@ -174,7 +182,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pots are just pots to me, old or new."
+      "Eng": "Pots are just pots to me, old or new.",
+      "Rus": "Горшки есть горшки как по мне, старые или новые."
     }
   },
   {
@@ -200,7 +209,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ssmash it and tear out its insides!"
+      "Eng": "Ssmash it and tear out its insides!",
+      "Rus": "Разбить и вырвать его внутренноссти!"
     }
   }
 ]
