--- a/translations/texts/objects/apex/apexbloodbank/apexbloodbank.object.json
+++ b/translations/texts/objects/apex/apexbloodbank/apexbloodbank.object.json
@@ -56,7 +56,7 @@
     },
     "Texts": {
       "Eng": "I can't say I've ever seen this much blood before.",
-      "Rus": ""
+      "Rus": "Не могу сказать видел ли я столько крови раньше."
     }
   },
   {
