--- a/translations/texts/objects/apex/apexcomfychair/apexcomfychair.object.json
+++ b/translations/texts/objects/apex/apexcomfychair/apexcomfychair.object.json
@@ -92,7 +92,7 @@
     },
     "Texts": {
       "Eng": "This sure is a comfy chair to sit on.",
-      "Rus": ""
+      "Rus": "Это безусловно удобный стул, чтобы сидеть."
     }
   },
   {
