--- a/translations/texts/objects/avian/ashjar3/ashjar3.object.json
+++ b/translations/texts/objects/avian/ashjar3/ashjar3.object.json
@@ -56,7 +56,7 @@
     },
     "Texts": {
       "Eng": "I wonder how thisss creature tastess.",
-      "Rus": ""
+      "Rus": "Интерессно, каково это ссущество на вкусс."
     }
   },
   {
@@ -68,7 +68,7 @@
     },
     "Texts": {
       "Eng": "I've never seen a jar like this before, perhaps the remains of someone with a sense of humour.",
-      "Rus": ""
+      "Rus": "Я никогда раньше не видел такую вазу, возможно, останки кого-то с чувством юмора."
     }
   },
   {
