Обновление translations/texts/objects/apex/apexcoolcomputer/apexcoolcomputer.object.json

--- a/translations/texts/objects/apex/apexcoolcomputer/apexcoolcomputer.object.json
+++ b/translations/texts/objects/apex/apexcoolcomputer/apexcoolcomputer.object.json
@@ -44,7 +44,7 @@
     },
     "Texts": {
       "Eng": "It's a computer screen.",
-      "Rus": ""
+      "Rus": "Это компьютерный экран"
     }
   },
   {
